--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Investor</title>
 </head>
 <body>
-    Welcome to Investor!<br>
+    Welcome to Investor!
     <br>
-    <input id="userInput" type="text" placeholder="Enter ticker name">
-    <button id="submitButton">Submit </button>
-    <p id="output"></p>   
+    <br>
+    <form>
+        <input class="userInput" id="userInput" type="text" placeholder="Enter ticker name">
+        <button class="myButton" type="button" id="submitButton">Submit </button>
+        <p id="output"></p>   
+    </form>
     <script src="script.js"></script>
 </body>
 </html>
