--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     Welcome to Investor!
     <br>
     <br>
-    <form>
-        <input class="userInput" id="userInput" type="text" placeholder="Enter ticker name">
-        <button class="myButton" type="button" id="submitButton">Submit </button>
-        <p id="output"></p>   
-    </form>
-    <script src="script.js"></script>
+    <main id="app"></main>   
+    <script src="dashboard.js"></script> 
+    <script src="router.js"></script>  
+    <script src="login.js"></script>    
+      
+
 </body>
 </html>
