--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <input class="userInput" id="userInput" type="text" placeholder="Enter ticker name">
         <button class="myButton" type="button" id="submitButton">Submit </button>
         <p id="output"></p>   
+        <canvas id="myChart"></canvas>
         </form>
     </template>
     <template id="login-template">
@@ -31,7 +32,10 @@
     <script src="dashboard.js"></script> 
     <script src="router.js"></script>  
     <script src="login.js"></script>    
-      
+    <script src="graph.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+    
 
 </body>
 </html>
