--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
         <input class="userInput" id="userInput" type="text" placeholder="Enter ticker name">
         <button class="myButton" type="button" id="submitButton">Submit </button>
         <p id="output"></p>   
+        <input id="moneyInvested" placeholder="Stocks bought"/>
+        <button class="investedButton" type="button" id="investedButton">Simulate</button>
         <canvas id="myChart"></canvas>
+        <p id="InvestmentResult"></p>
         </form>
     </template>
     <template id="login-template">
