register error handling

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     </template>
     <template id="register-template">
         <h2>Register</h2>
+        <h3 id="registerError"></h3>
         <input id="registerUsername" placeholder="Username" />
         <input id="registerPassword" placeholder="Password" />
         <button id="registerButton">Register</button>
