feat: make passwrod input field obscured

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h2>Login</h2>
         <h2 id="loginErrorMessage"></h2>
         <input id="username" placeholder="Username" />
-        <input id="password" placeholder="password" />
+        <input type="password" autocomplete="off" id="password" placeholder="password" />
 
         <button id="loginBtn">Login</button>
         <h2>I don't have an account</h2>
@@ -38,7 +38,7 @@
         <h2>Register</h2>
         <h3 id="registerError"></h3>
         <input id="registerUsername" placeholder="Username" />
-        <input id="registerPassword" placeholder="Password" />
+        <input type="password" autocomplete="of" id="registerPassword" placeholder="Password" />
         <button id="registerButton">Register</button>
     </template>
 
