--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Investor</title>
 </head>
 <body>
@@ -42,11 +42,11 @@
         <button id="registerButton">Register</button>
     </template>
 
-    <script src="dashboard.js"></script> 
-    <script src="router.js"></script>  
-    <script src="login.js"></script>    
-    <script src="register.js"></script>
-    <script src="graph.js"></script>
+    <script src="js/dashboard.js"></script> 
+    <script src="js/router.js"></script>  
+    <script src="js/login.js"></script>    
+    <script src="js/register.js"></script>
+    <script src="js/graph.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
     
