--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
         <button id="registerButton">Register</button>
     </template>
 
-    <script src="js/dashboard.js"></script> 
-    <script src="js/router.js"></script>  
-    <script src="js/login.js"></script>    
-    <script src="js/register.js"></script>
-    <script src="js/graph.js"></script>
+    <script type="module" src="js/dashboard.js"></script> 
+    <script type="module" src="js/router.js"></script>  
+    <script type="module" src="js/login.js"></script>    
+    <script type="module" src="js/register.js"></script>
+    <script type="module" src="js/graph.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
     
